--- a/Functions/P-Shell/README
+++ b/Functions/P-Shell/README
@@ -1,4 +1,4 @@
-# 🎨 🇵‌🇴‌🇼‌🇪‌🇷‌🇸‌🇭‌🇪‌🇱‌🇱‌ 🇵‌🇷‌🇴‌🇫‌🇮‌🇱‌🇪‌ (🇵‌🇷‌🇪‌🇹‌🇹‌🇾‌ 🇵‌🇴‌🇼‌🇪‌🇷‌🇸‌🇭‌🇪‌🇱‌🇱‌)
+# 🎨 POWERSHELL PROFILE : PRETTY
 
 🇦‌ 🇸‌🇹‌🇾‌🇱‌🇮‌🇸‌🇭‌ 🇦‌🇳‌🇩‌ 🇫‌🇺‌🇳‌🇨‌🇹‌🇮‌🇴‌🇳‌🇦‌🇱‌ 🇵‌🇴‌🇼‌🇪‌🇷‌🇸‌🇭‌🇪‌🇱‌🇱‌ 🇵‌🇷‌🇴‌🇫‌🇮‌🇱‌🇪‌ 🇹‌🇭‌🇦‌🇹‌ 🇱‌🇴‌🇴‌🇰‌🇸‌ 🇦‌🇳‌🇩‌ 🇫‌🇪‌🇪‌🇱‌🇸‌ 🇦‌🇱‌🇲‌🇴‌🇸‌🇹‌ 🇦‌🇸‌ 🇬‌🇴‌🇴‌🇩‌ 🇦‌🇸‌ 🇦‌ 🇱‌🇮‌🇳‌🇺‌🇽‌ 🇹‌🇪‌🇷‌🇲‌🇮‌🇳‌🇦‌🇱‌.
 
