--- a/Functions/P-Shell/README
+++ b/Functions/P-Shell/README
@@ -1,4 +1,8 @@
-# 🎨 POWERSHELL PROFILE : PRETTY
+🎨 POWERSHELL PROFILE : PRETTY
+
+𝙿𝙾𝚆𝙴𝚁𝚂𝙷𝙴𝙻𝙻 𝙿𝚁𝙾𝙵𝙸𝙻𝙴 : 𝙿𝚁𝙴𝚃𝚃𝚈
+
+ᴘᴏᴡᴇʀsʜᴇʟʟ ᴘʀᴏғɪʟᴇ : ᴘʀᴇᴛᴛʏ
 
 🇦‌ 🇸‌🇹‌🇾‌🇱‌🇮‌🇸‌🇭‌ 🇦‌🇳‌🇩‌ 🇫‌🇺‌🇳‌🇨‌🇹‌🇮‌🇴‌🇳‌🇦‌🇱‌ 🇵‌🇴‌🇼‌🇪‌🇷‌🇸‌🇭‌🇪‌🇱‌🇱‌ 🇵‌🇷‌🇴‌🇫‌🇮‌🇱‌🇪‌ 🇹‌🇭‌🇦‌🇹‌ 🇱‌🇴‌🇴‌🇰‌🇸‌ 🇦‌🇳‌🇩‌ 🇫‌🇪‌🇪‌🇱‌🇸‌ 🇦‌🇱‌🇲‌🇴‌🇸‌🇹‌ 🇦‌🇸‌ 🇬‌🇴‌🇴‌🇩‌ 🇦‌🇸‌ 🇦‌ 🇱‌🇮‌🇳‌🇺‌🇽‌ 🇹‌🇪‌🇷‌🇲‌🇮‌🇳‌🇦‌🇱‌.
 
